[package]
name = "bing-rs"
version = "0.1.2"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"


[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
clap = "2.33.3"
rand = "0.7.3"
dirs-next = "2.0.0"
chrono = "0.4.19"
ureq = {version="1.5.1", default-features=false,features=["tls", "json"]}
once_cell = "1.4.1"
